--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -58,6 +58,7 @@ section.filters button:hover {
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     position: relative;
+    z-index: 1;
 }
 .popover h2 {
     font-size: 16px;
