set margins to 0

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -39,7 +39,8 @@ section.filters button:hover {
 .amenities h3 {
     font-weight: 600;
     font-size: 16px;
-    margin-bottom: 5px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     text-align: left;
     margin-left: 30px;
 }
@@ -48,6 +49,7 @@ section.filters button:hover {
     font-weight: 400;
     font-size: 14px;
     margin-top: 0px;
+    margin-bottom: 0px;
     text-align: left;
     margin-left: 30px;
 }
