--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -39,6 +39,7 @@ section.filters button:hover {
 .amenities h3 {
     font-weight: 600;
     font-size: 16px;
+    margin-top: 5px;
     margin-bottom: 0px;
     text-align: left;
     margin-left: 30px;
