--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -38,33 +38,28 @@ div.information {
     border-bottom: 1px solid #DDDDDD;
     white-space: nowrap;
 }
-div.max_guest {
-    img-width: 100px;
-    font-size: 45%;
-    display: inline-block;
-    padding-top: 5px;
-}
-div.number_rooms {
-    img-width: 100px;
-    font-size: 45%;
-    display: inline-block;
-}
+div.max_guest,
+div.number_rooms,
 div.number_bathrooms {
-    img-width: 100px;
-    font-size: 45%;
-    display: inline-block;
+  line-height: 140px;
+  width: 100px;
+  height: 100%;
+  display: inline-block;
+  background-position: 50% 5px;
+  background-repeat: no-repeat;
 }
 .max_guest {
-    content: url(../images/icon_group.png);
+  background-image: url("../images/icon_group.png");
 }
 .number_rooms {
-    content: url(../images/icon_bed.png);
+  background-image: url("../images/icon_bed.png");
 }
 .number_bathrooms {
-    content: url(../images/icon_bath.png);
+  background-image: url("../images/icon_bath.png");
 }
 div.user,
 div.description {
-    font-size: 45%;
-    text-indent: 0;
+  text-align: left;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
