--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,42 +1,43 @@
 /* boxed list structure of places */
 .places {
-    font-size: 30px;
+  text-align: center;
+}
+.places h1 {
+  font-size: 30px;
+  text-align: left;
 }
 article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    display: inline-block;
-    text-indent: 50px;
-    min-height: 400px;
-    vertical-align: top;
+  width: 390px;
+  border: 1px solid #FF5A5F;
+  border-radius: 4px;
+  padding: 20px;
+  margin: 20px;
+  display: inline-block;
+  text-indent: 50px;
+  min-height: 250px;
+  vertical-align: top;
 }
 article h2 {
-    font-size: 30px;
-    display: inline-block;
+  font-size: 30px;
+  margin-top: 5px;
 }
 /* structure within boxed lists of places */
 div.price_by_night {
-    text-indent: 0;
-    text-align: center;
-    color: #FF5A5F;
-    border: 4px solid #FF5A5F;
-    border-radius: 50%;
-    min-width: 60px;
-    height: 60px;
-    line-height: 60px;
-    font-size: 30px;
-    display: inline-block;
-    float: right;
-    float: top;
+  color: #FF5A5F;
+  border: 4px solid #FF5A5F;
+  border-radius: 100%;
+  min-width: 60px;
+  height: 60px;
+  line-height: 60px;
+  font-size: 30px;
+  position: absolute;
+  top: 8px;
+  right: 20px;
 }
 div.information {
-    height: 80px;
-    border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;
-    white-space: nowrap;
+  height: 80px;
+  border-top: 1px solid #DDDDDD;
+  border-bottom: 1px solid #DDDDDD;
 }
 div.max_guest,
 div.number_rooms,
