--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -29,7 +29,7 @@ div.price_by_night {
   height: 60px;
   line-height: 60px;
   font-size: 30px;
-  position: absolute;
+  position: relative;
   top: -80px;
   float: right;
 }
